hide feedback page

--- a/templates/pages.html
+++ b/templates/pages.html
@@ -492,7 +492,7 @@ body {
                 <div class="option-title">CGPA Calculator</div>
                 <div class="option-description">Monitor your cumulative grade point average across all semesters.</div>
             </a>
-            <a href="{{ url_for('feedback') }}" class="option-card">
+            <a href="{{ url_for('loading') }}" class="option-card">
                 <div class="option-icon">💬</div>
                 <div class="option-title">Feedback</div>
                 <div class="option-description">Automate the feedback form process done in our college.</div>
