--- a/templates/login.html
+++ b/templates/login.html
@@ -454,7 +454,7 @@
             <form action="{{ url_for('login') }}" method="POST" id="loginForm">
                 <div class="form-group">
                     <div class="input-container">
-                        <input type="text" name="nm" class="input-field" placeholder="Username" required>
+                        <input type="text" name="nm" class="input-field" placeholder="Roll Number" required>
                     </div>
                 </div>
                 
